Added version 1.0 as a zip. Changed description.

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "Google Search Result Improved",
     "version": "1.0",
-    "description": "A chrome extension to extend the width of Google search results",
+    "description": "A chrome extension to improve the visualization of search results.",
     "permissions": [
         "activeTab",
         "scripting",
